--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
                 </li>
                 <li class="lista-menu__item">
                     <a href="https://xandevbrasil.github.io/alura-plus/" class="lista-menu__link">Alura Plus</a>
+                <li class="lista-menu__item">
+                    <a href="about.html" class="lista-menu__link">Sobre mim</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="contact.html" class="lista-menu__link">Contato</a>
                 </li>
             </ul>
+
         <img src="img/mini-Logo-Amaxe.png" alt="Logo da Amaxe" class="container__imagem">
         <h1 class="container__titulo"><b class="container__titulo--negrito">Alexandre</b>Egerland</h1>
     </div>
@@ -58,7 +64,7 @@
         <li class="opcoes__item"><a href="about.html" class="opcoes__link">Sobre mim</a>
             
         </li>
-        <li class="opcoes__item"><a href="html/contact.html" class="opcoes__link">Contatos</a></li>
+        <li class="opcoes__item"><a href="contact.html" class="opcoes__link">Contatos</a></li>
     </ul>
 
     <div class="container">
