--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
             <label for="menu" class="container__rotulo">
-        <span class="cabecalho__menu-hamburguer container__imagem"></span>
+                <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Projetos</li>
@@ -37,6 +37,16 @@
                 <li class="lista-menu__item">
                     <a href="contact.html" class="lista-menu__link">Contato</a>
                 </li>
+                <li class="lista-menu__titulo">Jogos</li>
+                <li class="lista-menu__item">
+                    <a href="https://editor.p5js.org/xandev/full/htXb5mLiV" class="lista-menu__link">Atari Atravessar</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="https://xandevbrasil.github.io/layout-store/" class="lista-menu__link">Layout-Store</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="https://xandevbrasil.github.io/alura-plus/" class="lista-menu__link">Alura Plus</a>
+                <li class="lista-menu__item">
             </ul>
 
         <img src="img/mini-Logo-Amaxe.png" alt="Logo da Amaxe" class="container__imagem">
@@ -65,6 +75,9 @@
             
         </li>
         <li class="opcoes__item"><a href="contact.html" class="opcoes__link">Contatos</a></li>
+    </ul>
+         </li>
+        <li class="opcoes__item"><a href="https://editor.p5js.org/xandev/full/htXb5mLiV" class="opcoes__link">Jogo Atravessar</a></li>
     </ul>
 
     <div class="container">
